--- a/lang/de_DE.po
+++ b/lang/de_DE.po
@@ -3028,7 +3028,7 @@ msgstr "Hier kannst du Schaltflächen hinzufügen, entfernen und bearbeiten."
 
 #: config-templatebuilder/avia-shortcodes/buttonrow/buttonrow.php:238
 msgid "Edit Button"
-msgstr "Schaltfläche bearbeiten"
+msgstr "Button bearbeiten"
 
 #: config-templatebuilder/avia-shortcodes/buttonrow/buttonrow.php:244
 #: config-templatebuilder/avia-shortcodes/buttonrow/buttonrow.php:254
@@ -3735,7 +3735,7 @@ msgstr "Element duplizieren"
 #: config-templatebuilder/avia-shortcodes/catalogue/catalogue.php:208
 #: config-templatebuilder/avia-shortcodes/iconlist/iconlist.php:243
 msgid "Add/Edit List items"
-msgstr "Hinzufügen/Bearbeiten von Listeneinträgen"
+msgstr "Listeneinträge hinzufügen/bearbeiten"
 
 #: config-templatebuilder/avia-shortcodes/catalogue/catalogue.php:209
 #: config-templatebuilder/avia-shortcodes/iconlist/iconlist.php:244
@@ -5421,7 +5421,7 @@ msgstr "Sende uns eine E-Mail"
 
 #: config-templatebuilder/avia-shortcodes/contact/contact.php:220
 msgid "Add/Edit Contact Form Elements"
-msgstr "Hinzufügen/bearbeiten von Kontaktformular-Elementen"
+msgstr "Kontaktformular-Elemente hinzufügen/bearbeiten"
 
 #: config-templatebuilder/avia-shortcodes/contact/contact.php:228
 #: config-templatebuilder/avia-shortcodes/testimonials/testimonials.php:267
@@ -7190,7 +7190,7 @@ msgstr ""
 #: config-templatebuilder/avia-shortcodes/gallery_horizontal/gallery_horizontal.php:208
 #: config-templatebuilder/avia-shortcodes/masonry_gallery/masonry_gallery.php:249
 msgid "Add/Edit Gallery"
-msgstr "Hinzufügen/bearbeiten"
+msgstr "Galerie hinzufügen/bearbeiten"
 
 #: config-templatebuilder/avia-shortcodes/gallery/gallery.php:229
 #: config-templatebuilder/avia-shortcodes/gallery_horizontal/gallery_horizontal.php:209
@@ -8558,7 +8558,7 @@ msgstr "Wir sind "
 
 #: config-templatebuilder/avia-shortcodes/headline_rotator/headline_rotator.php:233
 msgid "Add/Edit rotating text"
-msgstr "Hinzufügen / Bearbeiten von rotierenden Text"
+msgstr "Rotierenden Text hinzufügen/bearbeiten"
 
 #: config-templatebuilder/avia-shortcodes/headline_rotator/headline_rotator.php:234
 msgid "Here you can add, remove and edit the rotating text"
@@ -13054,7 +13054,7 @@ msgstr ""
 
 #: config-templatebuilder/avia-shortcodes/menu/menu.php:234
 msgid "Add/Edit submenu item text"
-msgstr "Hinzufügen / Bearbeiten von Untermenüs"
+msgstr "Untermenüs hinzufügen/bearbeiten"
 
 #: config-templatebuilder/avia-shortcodes/menu/menu.php:235
 msgid "Here you can add, remove and edit the submenu item text"
@@ -13824,7 +13824,7 @@ msgstr "Kategorie auswählen"
 
 #: config-templatebuilder/avia-shortcodes/post_metadata/post_metadata.php:255
 msgid "Add/Edit Metadata"
-msgstr "Hinzufügen/Bearbeiten von Metadaten"
+msgstr "Metadaten hinzufügen/bearbeiten"
 
 #: config-templatebuilder/avia-shortcodes/post_metadata/post_metadata.php:256
 msgid "Here you can add, remove and edit the metadata you want to display."
@@ -14469,7 +14469,7 @@ msgstr "Fortschrittsbalken-Titel"
 
 #: config-templatebuilder/avia-shortcodes/progressbar/progressbar.php:221
 msgid "Add/Edit Progress Bars"
-msgstr "Fortschrittsbalken hinzufügen/ bearbeiten"
+msgstr "Fortschrittsbalken hinzufügen/bearbeiten"
 
 #: config-templatebuilder/avia-shortcodes/progressbar/progressbar.php:222
 msgid "Here you can add, remove and edit the various progress bars."
@@ -17756,7 +17756,7 @@ msgstr "Gib hier den gewünschten Text ein, um die Person vorzustellen"
 
 #: config-templatebuilder/avia-shortcodes/team/team.php:260
 msgid "Add/Edit Social Service or Icon Links"
-msgstr "Hinzufügen/bearbeiten von Social-Services oder Symbol-Links"
+msgstr "Social-Services oder Icon-Links hinzufügen/bearbeiten"
 
 #: config-templatebuilder/avia-shortcodes/team/team.php:261
 #, fuzzy
@@ -17773,7 +17773,7 @@ msgstr ""
 #: config-templatebuilder/avia-shortcodes/team/team.php:264
 #, fuzzy
 msgid "Edit Social Service or Icon"
-msgstr "Hinzufügen/bearbeiten von Social-Services oder Symbol-Links"
+msgstr "Social-Services oder Icons hinzufügen/bearbeiten"
 
 #: config-templatebuilder/avia-shortcodes/team/team.php:300
 msgid ""
@@ -18146,7 +18146,7 @@ msgstr "Element duplizieren"
 
 #: config-templatebuilder/avia-shortcodes/timeline/timeline.php:226
 msgid "Add/Edit Milestones"
-msgstr "Hinzufügen/bearbeiten von Meilensteinen"
+msgstr "Meilensteine hinzufügen/bearbeiten"
 
 #: config-templatebuilder/avia-shortcodes/timeline/timeline.php:227
 msgid "Here you can add, remove and edit the milestones of your timeline."
@@ -18464,7 +18464,7 @@ msgstr ""
 
 #: config-templatebuilder/avia-shortcodes/toggles/toggles.php:268
 msgid "Add/Edit Toggles"
-msgstr "Toggles hinzufügen/ bearbeiten"
+msgstr "Umschalter hinzufügen/bearbeiten"
 
 #: config-templatebuilder/avia-shortcodes/toggles/toggles.php:269
 msgid "Here you can add, remove and edit the toggles you want to display."
@@ -34622,7 +34622,7 @@ msgstr "Neuen Portfolio Eintrag Hinzufügen"
 
 #: includes/admin/register-portfolio.php:17
 msgid "Edit Portfolio Entry"
-msgstr "Portfolio Eintrag Bearbeiten"
+msgstr "Portfolio Eintrag bearbeiten"
 
 #: includes/admin/register-portfolio.php:18
 msgid "New Portfolio Entry"
@@ -34630,11 +34630,11 @@ msgstr "Neuer Portfolio Eintrag"
 
 #: includes/admin/register-portfolio.php:19
 msgid "View Portfolio Entry"
-msgstr "Portfolio Eintrag Ansehen"
+msgstr "Portfolio Eintrag ansehen"
 
 #: includes/admin/register-portfolio.php:20
 msgid "Search Portfolio Entries"
-msgstr "Portfolio Einträge Durchsuchen"
+msgstr "Portfolio Einträge durchsuchen"
 
 #: includes/admin/register-portfolio.php:21
 msgid "No Portfolio Entries found"
